fix(deps): update deps for security vulnerabilities (#263)
* fix(deps): update deps for security vulnerabilities

Update various deps to validate npm audit

fix #261

* chore(deps): dont ignore package-lock

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@schematics/angular": ">=8.0.0",
     "cheerio": "1.0.0-rc.3",
     "colorette": "1.1.0",
-    "copy-webpack-plugin": "5.1.1",
+    "copy-webpack-plugin": "^6.0.3",
     "tslib": "^1.9.0",
     "ws": "^7.0.1"
   },
@@ -53,10 +53,10 @@
     "@types/webpack": "^4.4.14",
     "@types/webpack-dev-server": "^3.1.1",
     "@types/ws": "^7.2.1",
-    "commitizen": "^4.0.3",
+    "commitizen": "^4.1.2",
     "cz-conventional-changelog": "^3.1.0",
     "husky": "^4.0.10",
-    "karma": "4.4.1",
+    "karma": "^5.1.1",
     "lint-staged": "^10.0.4",
     "rimraf": "^3.0.1",
     "semantic-release": "^15.9.17",
